--- a/contatos.html
+++ b/contatos.html
@@ -37,8 +37,8 @@
       </div>          
     </div>    
   </div>
-  <button class="topBtnPhone downBtn" id="sideBtnDown" onclick="sidebuttonD()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
-  <button class="topBtnPhone upBtn" id="sideBtnUp" onclick="sidebuttonU()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="topBtnPhone openMenuBars" id="menuBars" onclick="topButtonO()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
   <nav id="nav">
     <ul class="navMenu"> <!--Menu-->
       <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
