--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
       </div>          
     </div>    
   </div>
-  
-  <button class="topBtnPhone openMenuBars" id="menuBars" onclick="topButtonO()"><i class="fas fa-bars"></i></button> <!--Sidebutton Phone Mode-->
-  <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="topBtnPhone openMenuBars" id="menuBars" onclick="topButtonO()"><i class="fas fa-bars"></i></button> <!--Top Button Phone Mode-->
+  <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button> <!--Top Button Phone Mode-->
   <nav id="nav">
     <ul class="navMenu"> <!--Menu-->
       <a href="#"><li class="menuText" id="op1">INICIO</li></a>
@@ -63,15 +62,13 @@
     <a href="produtos.html"><li class="selectPM">VETERENÁRIA</li></a>
   </div> -->
 
-  <!--Search Bar-->
-  <div class="search">
+  <!-- Search Bar-->
+  <!-- <div class="search">
     <a onclick="searchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
     <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
-    <!-- <a onclick="openSearchBar()" id="openSearch"><i class="fas fa-angle-right openSearch"></i></a> -->
     <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
-    
-  </div>
-  <!--End Search Bar-->
+  </div> -->
+  <!--End Search Bar -->
 
   <div class="main"> <!--"Body"/Main/Content-->
     <div class="news"> <!--Div news widget-->
