--- a/associados.html
+++ b/associados.html
@@ -36,8 +36,8 @@
       </div>          
     </div>    
   </div>
-  <button class="topBtnPhone openMenuBars" id="menuBars" onclick="topButtonO()"><i class="fas fa-caret-down"></i></button> <!--Sidebutton Phone Mode-->
-  <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-caret-up"></i></button> <!--Sidebutton Phone Mode-->
+  <button class="topBtnPhone openMenuBars" id="menuBars" onclick="topButtonO()"><i class="fas fa-bars"></i></button> <!--Top Button Phone Mode-->
+  <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button> <!--Top Button Phone Mode-->
   <nav id="nav">
     <ul class="navMenu"> <!--Menu-->
       <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
