--- a/contatos.html
+++ b/contatos.html
@@ -40,12 +40,12 @@
   <button class="topBtnPhone closeMenuCross" id="menuClose" onclick="topButtonC()"><i class="fas fa-times"></i></button> <!--Top Button Phone Mode-->
   <nav id="nav">
     <ul class="navMenu"> <!--Menu-->
-      <a href="#"><li class="menuText" id="op1">INICIO</li></a>
+      <a href="index.html"><li class="menuText" id="op1">INICIO</li></a>
       <a href="quemsomos.html"><li class="menuText" id="op2">QUEM SOMOS</li></a>
       <a href="galeria.html"><li class="menuText" id="op3">GALERIA</li></a>
       <!-- <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS <i class="fas fa-angle-down downArrow"></i></li></a> -->
       <a href="produtos.html"><li class="menuText" id="op4">PRODUTOS</li></a>
-      <a href="contatos.html"><li class="menuText" id="op5">CONTATOS</li></a>
+      <a href="#"><li class="menuText" id="op5">CONTATOS</li></a>
       <a href="marcas.html"><li class="menuText" id="op6">MARCAS</li></a>
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
