Located in test folder insider and new file and folder inside folder with file :3

--- a/associados.html
+++ b/associados.html
@@ -49,6 +49,7 @@
       <a href="#"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
+  <div class="backgroundIMG">
     <div class="main">
       <br>
       <br>
@@ -69,6 +70,7 @@
       <br>
       <br>
     </div>
+  </div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
