--- a/galeria.html
+++ b/galeria.html
@@ -49,6 +49,7 @@
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
+  <div class="backgroundIMG">
   <div class="main">
     <!--ImageView-->
     <div class="gallery">
@@ -124,6 +125,7 @@
       </div>
     </div>
   </div>
+</div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
