--- a/produtos.html
+++ b/produtos.html
@@ -50,6 +50,7 @@
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
+  <div class="backgroundIMG">
   <div class="main">
   </br>
     <div class="tittleProductCategory">
@@ -108,6 +109,7 @@
       </a>      
     </div>
   </div>
+</div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
