--- a/quemsomos.html
+++ b/quemsomos.html
@@ -49,6 +49,7 @@
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
+  <div class="backgroundIMG">
   <div class="main">
     <div class="welcome">
       </br><h1>Quem Somos</h1>
@@ -64,6 +65,7 @@
     <br>
     <br>
   </div>
+</div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
   <div class="wheretofindusFooter">
