--- a/contatos.html
+++ b/contatos.html
@@ -50,6 +50,7 @@
       <a href="associados.html"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
+  <div class="backgroundIMG">
   <div class="main"> <!--"Body"/Main/Content-->
     <br>
     <br>
@@ -70,6 +71,7 @@
     <br>
     <br>
   </div><!--/Main-->
+</div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
     <div class="wheretofindusFooter">
