Revert "Located in test folder insider and new file and folder inside folder with file :3"
This reverts commit 15c5a892c6bde718665abf516f0a2c3c10ed6cab.

--- a/index.html
+++ b/index.html
@@ -70,221 +70,218 @@
   </div> -->
   <!--End Search Bar -->
 
-  <div class="backgroundIMG">
-    <div class="main"> <!--"Body"/Main/Content-->
-      <div class="news"> <!--Div news widget-->
-        <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=black&amp;briefcolor=696969&amp;textcolor=black&amp;typeface=sans-serif&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr"></script> <!--News widget-->
-      </div>
-      <!--Slideshow-->
-      <div class="slideshow">
-        <img src="Images/slideshow/bowl_tomatos.jpg" class="slideshowimgs">
-        <img src="Images/slideshow/plant.jpg" class="slideshowimgs">
-        <img src="Images/slideshow/view.jpg" class="slideshowimgs">
-        <img src="Images/slideshow/tractor.jpg" class="slideshowimgs">
-      </div>
-      <!--End-->
-      <div class="welcome"> <!--Text-->
-        <p><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
-      </div> 
-      <br>
-      <br>
-      <div class="tittleProductCategory">
-        <p>Categorias</p>
-      </div>
-      <br>
-      <br>
-      <div class="productsCategories">
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fab fa-pagelines categoriesIcons"></i>
-            <p class="tituloCategoria">ADUBOS</p>
-          </div>
-        </a>
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fas fa-microscope categoriesIcons"></i>
-            <p class="tituloCategoria">AGROQUIMICOS</p>
-          </div>
-        </a>
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fas fa-horse-head categoriesIcons"></i>
-            <p class="tituloCategoria">ALIMENTAÇÃO ANIMAL</p>
-          </div>
-        </a>
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fas fa-hammer categoriesIcons"></i>
-            <p class="tituloCategoria">BRICOLAGE</p>
-          </div>
-        </a>
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fas fa-tractor categoriesIcons"></i>
-            <p class="tituloCategoria">MÁQUINA</p>
-          </div>
-        </a>
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fas fa-paw categoriesIcons"></i>
-            <p class="tituloCategoria">PETCARE</p>
-          </div>
-        </a>
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fas fa-book categoriesIcons"></i>
-            <p class="tituloCategoria">SERVIÇOS</p>
-          </div>
-        </a>
-        <a href="produtos.html">
-          <div class="productsCategoriesplaceHolders">
-            <i class="fas fa-stethoscope categoriesIcons"></i>
-            <p class="tituloCategoria">VETERENÁRIA</p>
-          </div>
-        </a>   
-      </div>
-      <!-- <div>
-        <img src="Images/lavricartaxoPlace.PNG">
-      </div> -->
-      <!--carousel-->
-      <div class="marcass">
-        <div class="marcas">
-          <a href="" >
-            <div class="marca">
-              <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a><!--End carousel-->
-          <!--Double Brands-->
-          <a href="" >
-            <div class="marca">
-              <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a>
-          <a href="">
-            <div class="marca">
-              <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
-            </div>
-          </a><!--End carousel-->
+  <div class="main"> <!--"Body"/Main/Content-->
+    <div class="news"> <!--Div news widget-->
+      <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=black&amp;briefcolor=696969&amp;textcolor=black&amp;typeface=sans-serif&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr"></script> <!--News widget-->
+    </div>
+    <!--Slideshow-->
+    <div class="slideshow">
+      <img src="Images/slideshow/bowl_tomatos.jpg" class="slideshowimgs">
+      <img src="Images/slideshow/plant.jpg" class="slideshowimgs">
+      <img src="Images/slideshow/view.jpg" class="slideshowimgs">
+      <img src="Images/slideshow/tractor.jpg" class="slideshowimgs">
+    </div>
+    <!--End-->
+    <div class="welcome"> <!--Text-->
+      <p><br><h2><b>Seja bem vindo ao nosso site</b></h2><br>É com enorme prazer que registamos a sua presença no nosso site, esperamos que encontre tudo o que precisa para realizar os seus projectos com sucesso!.<br><br>A LAVRICARTAXO - Cooperativa Agro-Pecuária do Cartaxo, C.R.L.. coloca ao seu dispôr uma vasta equipa para que possa ter todo o apoio que considere necessário.<br><br>O nosso objectivo é servir os nossos clientes com competência e dedicação para que o nosso cliente volte sempre!<br><br>Ao adquirir produtos na nossa empresa deve saber que estará sempre a comprar qualidade ao melhor preço! Volte sempre, será sempre um gosto tê-lo de volta!</p>
+    </div> 
+    <br>
+    <br>
+    <div class="tittleProductCategory">
+      <p>Categorias</p>
+    </div>
+    <br>
+    <br>
+    <div class="productsCategories">
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fab fa-pagelines categoriesIcons"></i>
+          <p class="tituloCategoria">ADUBOS</p>
         </div>
-      </div><!--End-->
-    </div><!--/Main-->
-  </div>
-  
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-microscope categoriesIcons"></i>
+          <p class="tituloCategoria">AGROQUIMICOS</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-horse-head categoriesIcons"></i>
+          <p class="tituloCategoria">ALIMENTAÇÃO ANIMAL</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-hammer categoriesIcons"></i>
+          <p class="tituloCategoria">BRICOLAGE</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-tractor categoriesIcons"></i>
+          <p class="tituloCategoria">MÁQUINA</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-paw categoriesIcons"></i>
+          <p class="tituloCategoria">PETCARE</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-book categoriesIcons"></i>
+          <p class="tituloCategoria">SERVIÇOS</p>
+        </div>
+      </a>
+      <a href="produtos.html">
+        <div class="productsCategoriesplaceHolders">
+          <i class="fas fa-stethoscope categoriesIcons"></i>
+          <p class="tituloCategoria">VETERENÁRIA</p>
+        </div>
+      </a>   
+    </div>
+    <!-- <div>
+      <img src="Images/lavricartaxoPlace.PNG">
+    </div> -->
+    <!--carousel-->
+    <div class="marcass">
+      <div class="marcas">
+        <a href="" >
+          <div class="marca">
+            <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a><!--End carousel-->
+        <!--Double Brands-->
+        <a href="" >
+          <div class="marca">
+            <img src="Images/marcas/agrolex.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/sirosubs.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/belchim.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/nutrofertil.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/biona.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/cadubal.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/deiba.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/lena.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/einhell.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/epagro.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/fertiprado.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/fito.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a>
+        <a href="">
+          <div class="marca">
+            <img src="Images/marcas/iqv.png"> <!--onmouseover="brandPause()" onmouseout="brandUnpause()">-->
+          </div>
+        </a><!--End carousel-->
+      </div>
+    </div><!--End-->
+  </div><!--/Main-->
 </body>
 <footer class="footerBottom"> <!--Footer-->
     <div class="wheretofindusFooter">
