--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
   </div> -->
   <!--End Search Bar -->
 
+
+  <div class="backgroundIMG">
   <div class="main"> <!--"Body"/Main/Content-->
     <div class="news"> <!--Div news widget-->
       <script type="text/javascript" src="JS/newsWidget.js?widgettitle=Noticías&amp;categories=126,127,128,129,&amp;showRelease=0&amp;width=auto&amp;headlinebold=1&amp;headlinesonly=1&amp;headlinecolor=black&amp;briefcolor=696969&amp;textcolor=black&amp;typeface=sans-serif&amp;fontsize=11&amp;width=auto&amp;headlinesepstyle=solid&amp;showimages=0&amp;numstories=5&amp;bgcolor=rgba(255, 255, 255, 0)&amp;urldest=247pr"></script> <!--News widget-->
@@ -282,6 +284,7 @@
       </div>
     </div><!--End-->
   </div><!--/Main-->
+</div>
 </body>
 <footer class="footerBottom"> <!--Footer-->
     <div class="wheretofindusFooter">
