--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
   </div> -->
 
   <!-- Search Bar-->
-  <!-- <div class="search">
-    <a onclick="searchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
-    <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
+  <div class="search" id="search">
+    <a onclick="openSearchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
     <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
-  </div> -->
+    <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
+    <a onclick="" id="searchMG"><i class="fas fa-search searchMGS"></i></a>
+  </div>
   <!--End Search Bar -->
 
 
