--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="search" id="search">
     <a onclick="openSearchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
     <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
-    <a onclick="" id="searchMGS"><i class="fas fa-search searchMGS"></i></a>
+    <a onclick="" id="searchMGSearch"><i class="fas fa-search searchMGSearch"></i></a>
     <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
   </div>
   <!--End Search Bar -->
