--- a/contatos.html
+++ b/contatos.html
@@ -54,23 +54,25 @@
   <div class="main"> <!--"Body"/Main/Content-->
     <br>
     <br>
+    <p class="tittleContacts">ONDE NOS ENCONTRAR</p>
+    <br>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3093.4921028230037!2d-8.793348985281035!3d39.16353213881896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd18e887f966c3b3%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1sen!2spt!4v1621948598577!5m2!1sen!2spt" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <br>
     <br>
+    <p class="tittleContacts">FALE CONNOSCO</p>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <p class="introContatcs">Utilize o seguinte formulário para colocar as suas dúvidas, opiniões e sugestões</p>
+    <br>  
+    <form method="post">
+      <input type="text" placeholder="*Nome" class="inputs inputName" required>
+      <input type="email" placeholder="*Email" class="inputs inputEmail" required>
+      <input type="tel" placeholder="*Telefone" maxlength="9" class="inputs inputCellphone" required>
+      <input type="text" placeholder="*Assunto" class="inputs inputMatter" required>
+      <input type="text" placeholder="Empresa" class="inputs inputEnterprise">
+      <textarea placeholder="*Mensagem" cols="30" rows="10" class="inputs inputMessage" required></textarea>    
+      <button type="submit">Enviar</button>
+    </form>
+    
   </div><!--/Main-->
 </div>
 </body>
