--- a/contatos.html
+++ b/contatos.html
@@ -69,7 +69,8 @@
       <input type="tel" placeholder="*Telefone" maxlength="9" class="inputs inputCellphone" required>
       <input type="text" placeholder="*Assunto" class="inputs inputMatter" required>
       <input type="text" placeholder="Empresa" class="inputs inputEnterprise">
-      <textarea placeholder="*Mensagem" cols="30" rows="10" class="inputs inputMessage" required></textarea>    
+      <textarea placeholder="*Mensagem" cols="30" rows="10" class="inputs inputMessage" required></textarea>
+      <p>*Obrigatório preencher</p>    
       <button type="submit">Enviar</button>
     </form>
     
