--- a/contatos.html
+++ b/contatos.html
@@ -70,8 +70,8 @@
       <input type="text" placeholder="*Assunto" class="inputs inputMatter" required>
       <input type="text" placeholder="Empresa" class="inputs inputEnterprise">
       <textarea placeholder="*Mensagem" cols="30" rows="10" class="inputs inputMessage" required></textarea>
-      <p>*Obrigatório preencher</p>    
-      <button type="submit">Enviar</button>
+      <p class="textContatosI">*Obrigatório preencher</p>    
+      <button type="submit" class="btnSend">Enviar</button>
     </form>
     
   </div><!--/Main-->
