--- a/associados.html
+++ b/associados.html
@@ -49,6 +49,14 @@
       <a href="#"><li class="menuText" id="op7">ASSOCIADOS</li></a>
     </ul>
   </nav>
+  <!-- Search Bar-->
+  <div class="search" id="search">
+    <a onclick="openSearchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
+    <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
+    <a onclick="" id="searchMGSearch"><i class="fas fa-search searchMGSearch"></i></a>
+    <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
+  </div>
+  <!--End Search Bar -->
   <div class="backgroundIMG">
     <div class="main">
       <br>
