--- a/produtos.html
+++ b/produtos.html
@@ -60,7 +60,26 @@
   <!--End Search Bar -->
   <div class="backgroundIMG">
   <div class="main">
-  </br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  <!-- </br>
     <div class="tittleProductCategory">
       <p>Categorias</p>
     </div>
@@ -115,7 +134,7 @@
           <p class="tituloCategoria">VETERENÁRIA</p>
         </div>
       </a>      
-    </div>
+    </div> -->
   </div>
 </div>
   </body>
