--- a/contatos.html
+++ b/contatos.html
@@ -6,6 +6,7 @@
       <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
       <link rel="icon" type="image/jpg" href="Images/icon.png" />
       <link rel="stylesheet" href="fontawesome/css/all.css">
       <link rel="stylesheet" href="fontawesome/css/all.min.css">     
@@ -72,14 +73,15 @@
     <p class="introContatcs">Utilize o seguinte formulário para colocar as suas dúvidas, opiniões e sugestões</p>
     <br>  
     <form method="post">
-      <input type="text" placeholder="*Nome" class="inputs inputName" required>
-      <input type="email" placeholder="*Email" class="inputs inputEmail" required>
-      <input type="tel" placeholder="*Telefone" maxlength="9" class="inputs inputCellphone" required>
-      <input type="text" placeholder="*Assunto" class="inputs inputMatter" required>
+      <input type="text" placeholder="Nome" class="inputs inputName" required>
+      <input type="email" placeholder="Email" class="inputs inputEmail" required>
+      <input type="tel" placeholder="Telefone" maxlength="9" class="inputs inputCellphone" required>
+      <input type="text" placeholder="Assunto" class="inputs inputMatter" required>
       <input type="text" placeholder="Empresa" class="inputs inputEnterprise">
-      <textarea placeholder="*Mensagem" class="inputs inputMessage" required></textarea>
-      <p class="textContatosI">*Obrigatório preencher</p>    
-      <button type="submit" class="btnSend">Enviar</button>
+      <textarea placeholder="Mensagem" class="inputs inputMessage" required></textarea>
+      <p class="textContatosI">Obrigatório preencher</p>    
+      <button type="submit" class="btn btn-success">Enviar</button>
+      <button type="reset" class="btn btn-danger">Limpar</button>
     </form>
     
   </div><!--/Main-->
