--- a/index.html
+++ b/index.html
@@ -65,8 +65,11 @@
   <!-- Search Bar-->
   <div class="search" id="search">
     <a onclick="openSearchBar()" id="searchMG"><i class="fas fa-search searchMG"></i></a>
-    <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
-    <a onclick="" id="searchMGSearch"><i class="fas fa-search searchMGSearch"></i></a>
+    <div class="searchBarnMG">
+      <input type="text" class="searchBar" id="searchBar" placeholder="Procurar...">
+      <a onclick="" id="searchMGSearch"><i class="fas fa-search searchMGSearch"></i></a>
+    </div>
+    
     <a onclick="closeSearchBar()" id="closeSearch"><i class="fas fa-angle-left closeSearch"></i></a>
   </div>
   <!--End Search Bar -->
