--- a/contatos.html
+++ b/contatos.html
@@ -77,27 +77,37 @@
     <div class="formContacts">
       <form method="post">
         <div class="divInputName">
-          <label>*Nome</label>
-          <input type="text" class="inputs inputName" required>
+          <label class="labels">*Nome</label>
+          <input type="text" placeholder="Nome" class="inputs inputName" required>
         </div>
+        <br>
+        <br>
         <div class="divInputEmail">
-          <label>*Email</label>
+          <label class="labels">*Email</label>
           <input type="email" placeholder="Email" class="inputs inputEmail" required>
         </div>
+        <br>
+        <br>
         <div class="divInputCellphone">
-          <label>Telefone</label>
+          <label class="labels">Telefone</label>
           <input type="tel" placeholder="Telefone" maxlength="9" class="inputs inputCellphone" required>
         </div>
+        <br>
+        <br>
         <div class="divInputMatter">
-          <label>*Assunto</label>
+          <label class="labels">*Assunto</label>
           <input type="text" placeholder="Assunto" class="inputs inputMatter" required>
         </div>
+        <br>
+        <br>
         <div class="divInputEnterprise">
-          <label>Empresa</label>
+          <label class="labels">Empresa</label>
           <input type="text" placeholder="Empresa" class="inputs inputEnterprise">
         </div>
+        <br>
+        <br>
         <div class="divInputMessage">
-          <label>*Mensagem</label>
+          <label class="labels">*Mensagem</label>
           <textarea placeholder="Mensagem" class="inputs inputMessage" required></textarea>
         </div>
       <p class="textContatosI">*Obrigatório preencher</p>    
