--- a/contatos.html
+++ b/contatos.html
@@ -110,9 +110,16 @@
           <label class="labels">*Mensagem</label>
           <textarea placeholder="Mensagem" class="inputs inputMessage" required></textarea>
         </div>
-      <p class="textContatosI">*Obrigatório preencher</p>    
-      <button type="submit" class="btn btn-success">Enviar</button>
-      <button type="reset" class="btn btn-danger">Limpar</button>
+        <br>
+        <br>
+      <p class="textContatosI">*Obrigatório preencher</p> 
+      <br>   
+      <button type="submit" class="button btnSend">Enviar</button>
+      <button type="reset" class="button btnClean">Limpar</button>
+      <br>
+      <br>
+      <br>
+      <br>
     </form>
     </div>
     
