--- a/contatos.html
+++ b/contatos.html
@@ -6,7 +6,7 @@
       <meta name="description" content="LAVRICARTAXO Cooperativa agricola do Cartaxo, Vinhas, Vinhos, adubos, agroquimicos, fitofarmacos, sementes, batatas, rações">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
       <link rel="icon" type="image/jpg" href="Images/icon.png" />
       <link rel="stylesheet" href="fontawesome/css/all.css">
       <link rel="stylesheet" href="fontawesome/css/all.min.css">     
@@ -108,10 +108,10 @@
         <br>
         <div class="divInputMessage">
           <label class="labels">*Mensagem</label>
+          <br>
+          <br>
           <textarea placeholder="Mensagem" class="inputs inputMessage" required></textarea>
         </div>
-        <br>
-        <br>
       <p class="textContatosI">*Obrigatório preencher</p> 
       <br>   
       <button type="submit" class="button btnSend">Enviar</button>
